프론트엔드 조별과제 검수전 완성본

--- a/NEW_project/createCar.html
+++ b/NEW_project/createCar.html
@@ -16,7 +16,10 @@
     <header>
         <div class="headerContainer">
             <ul class="headerTitle1">
-                <li><img id="mainLogo" src="/pictures/logo3.png" alt="" width="160" height="25"></li>
+
+                <li><a href="../NEW_project/main.html"><img id="mainLogo" src="../pictures/logo3.png" alt="" width="250"
+                            height="30"></a></li>
+
                 <li id="carName1">
 
                 </li>
@@ -165,7 +168,7 @@
                 </h3>
 
 
-                <img id="firecracker" src="/pictures/폭죽.gif" alt="">
+                <img id="firecracker" src="../pictures/폭죽.gif" alt="">
                 <div id="modelBox">
                 </div>
                 <h4>* 상기 이미지는 내/외장 색상 선택을 돕기 위한 참고용으로 제공되고 있습니다.</h4>
@@ -191,7 +194,7 @@
 
 
             <div>
-                <img id="footerLogo" src="/pictures/footer_logo.png" alt="">
+                <img id="footerLogo" src="../pictures/footer_logo.png" width="90" height="100" alt="">
             </div>
 
             <div class="footerMenu1">
@@ -223,13 +226,13 @@
 
             <div class="footerMenu2">
                 <ul class="footerList5">
-                    <li><img src="/pictures/로고1.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고2.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고3.png" alt="" width="13" height="20"></li>
-                    <li><img src="/pictures/로고4.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고5.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고6.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고7.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고1.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고2.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고3.png" alt="" width="13" height="20"></li>
+                    <li><img src="../pictures/로고4.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고5.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고6.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고7.png" alt="" width="20"></li>
                 </ul>
             </div>
 
@@ -238,28 +241,28 @@
 
         <div class="footerContainer2">
             <ul class="footerList6">
-                <li><img src="/pictures/로고8.png" alt=""><span>웹 접근성 품질인증</span></li>
-                <li><img src="/pictures/로고9.png" alt=""><span>
+                <li><img src="../pictures/로고8.png" alt=""><span>웹 접근성 품질인증</span></li>
+                <li><img src="../pictures/로고9.png" alt=""><span>
                         우수디자인 지식경제부선정
                     </span> </li>
-                <li><img src="/pictures/로고10.png" alt=""><span>
+                <li><img src="../pictures/로고10.png" alt=""><span>
                         가족친화 우수기관
                     </span></li>
-                <li><img src="/pictures/로고11.png" alt=""><span>
+                <li><img src="../pictures/로고11.png" alt=""><span>
                         2022년 한국서비스품질지수 (KS- <br>
                         SQI) 자동차 A/S 부문 8년 연속 1위
                     </span></li>
-                <li><img src="/pictures/로고12.png" alt=""><span>
+                <li><img src="../pictures/로고12.png" alt=""><span>
                         2022년 한국품질만족지수 (KS- <br>
                         QEI) 조사 12개 부문 1위
                     </span></li>
-                <li><img src="/pictures/로고13.png" alt=""><span>
+                <li><img src="../pictures/로고13.png" alt=""><span>
                         2023년 국가고객만족도(NCSI) <br>
                         조사 대상 전 부문 1위 수상 (준중형, <br>
                         중형, 준대형, 대형, 컴팩트RV, <br>
                         대형RV, 전기차)
                     </span></li>
-                <li><img src="/pictures/로고14.png" alt=""><span>
+                <li><img src="../pictures/로고14.png" alt=""><span>
                         KMAC 선정<br>
                         2022년 한국산업의 고객만족도<br>
                         일반승용차 부문 29년 연속<br>
