--- a/NEW_project/main.html
+++ b/NEW_project/main.html
@@ -17,38 +17,38 @@
         <div class="headerContainer" id="headerContainer">
 
 
-            <img id="mainLogo" src="/pictures/logo.png" alt="" width="160" height="25">
+            <img id="mainLogo" src="../pictures/logo.png" alt="" width="250" height="30">
             <ul class="boxContainer">
-                <a href="">
+                <a href="../NEW_project/myCar.html">
                     <li>모델　　</li>
                 </a>
-                <a href="/project/myCar.html">
-                    <li>구매/이벤트　　</li>
+                <a href="../globalEventPage/globalEvent.html">
+                    <li>이벤트　　</li>
                 </a>
 
                 <a href="">
                     <li>서비스/멤버십　　</li>
                 </a>
-                <a href="">
+                <a href="../loginPage/230822_customperfect.html">
                     <li>디지털/고객지원　　</li>
                 </a>
                 <a href="">
                     <li>브랜드　　</li>
                 </a>
 
-                <li><img src="/pictures/현대샵.png" alt=""></li>
+                <li><img src="../pictures/현대샵.png" alt=""></li>
             </ul>
 
 
             <ul class="loginContainer" id="loginContainer">
                 <li>전기-수소차<span id="lgText">보조금조회</span></li>
                 <li>KR</li>
-                <li><img onclick="mainLoginList()" id="loginPage" src="/pictures/마이페이지.png" alt=""></li>
+                <li><img onclick="mainLoginList()" id="loginPage" src="../pictures/마이페이지.png" alt=""></li>
                 <ul id="loginPageList">
-                    <li><a href="https://prd.kr-ccapi.hyundai.com/web/v1/user/signin">개인 로그인 ></a></li>
+                    <li><a href="../loginPage/230822_loginperfect.html">개인 로그인 ></a></li>
                     <li>법인 로그인 ></li>
                 </ul>
-                <li><img onclick="mainSearch()" src="/pictures/돋보기.png" alt=""></li>
+                <li><img onclick="mainSearch()" src="../pictures/돋보기.png" alt=""></li>
                 <li><i class="bi bi-list"></i></li>
             </ul>
 
@@ -90,7 +90,7 @@
 
                 <div id="picAll">
                     <div id="picList1">
-                        <img id="car1" src="/pictures/산타페2.jpg" alt="">
+                        <img id="car1" src="../pictures/산타페2.jpg" alt="">
                         <div id="carText1">
                             <h1>The all-new SANTA FE</h1>
                             <span>
@@ -102,7 +102,7 @@
                     </div>
 
                     <div id="picList2">
-                        <img id="car2" src="/pictures/소나타.jpg" alt="">
+                        <img id="car2" src="../pictures/소나타.jpg" alt="">
                         <div id="carText2">
                             <h1>SONATA The Edge</h1>
                             <span>
@@ -122,7 +122,7 @@
                     </div>
 
                     <div id="picList4">
-                        <img id="car4" src="/pictures/케스퍼.jpg" alt="">
+                        <img id="car4" src="../pictures/케스퍼.jpg" alt="">
                         <div id="carText4">
                             <h1>CASPER</h1>
                             <span>
@@ -132,7 +132,7 @@
                     </div>
 
                     <div id="picList5">
-                        <img id="car5" src="/pictures/스파이더맨 메인.jpg" alt="">
+                        <img id="car5" src="../pictures/스파이더맨 메인.jpg" alt="">
                         <div id="carText5">
                             <h1>엔터테인먼트</h1>
                             <span>
@@ -142,7 +142,7 @@
                     </div>
 
                     <div id="picList6">
-                        <img id="car6" src="/pictures/아이오닉 메인.jpg" alt="">
+                        <img id="car6" src="../pictures/아이오닉 메인.jpg" alt="">
                         <div id="carText6">
                             <h1>IONIQ5 N</h1>
                             <span>
@@ -181,20 +181,20 @@
         <div class="bodyMenuContainer">
             <div class="dynamicMenu">
                 <ul>
-                    <a href="/NEW_project/myCar.html">
-                        <li><img id="dynamicIcon1" src="/pictures/견적내기.png" alt=""><span>견적내기</span></li>
+                    <a href="../NEW_project/myCar.html">
+                        <li><img id="dynamicIcon1" src="../pictures/견적내기.png" alt=""><span>견적내기</span></li>
+                    </a>
+                    <a href="../loginPage/230822_customperfect.html">
+                        <li><img id="dynamicIcon2" src="../pictures/고객지원.png" alt=""><span>고객지원</span></li>
                     </a>
                     <a href="">
-                        <li><img id="dynamicIcon2" src="/pictures/고객지원.png" alt=""><span>고객지원</span></li>
+                        <li><img id="dynamicIcon3" src="../pictures/시승신청.png" alt=""><span>시승신청</span></li>
+                    </a>
+                    <a href="../globalEventPage/globalEvent.html">
+                        <li><img id="dynamicIcon4" src="../pictures/이벤트.png" alt=""><span id="span1">이벤트</span></li>
                     </a>
                     <a href="">
-                        <li><img id="dynamicIcon3" src="/pictures/시승신청.png" alt=""><span>시승신청</span></li>
-                    </a>
-                    <a href="/globalEventPage/globalEvent.html">
-                        <li><img id="dynamicIcon4" src="/pictures/이벤트.png" alt=""><span id="span1">이벤트</span></li>
-                    </a>
-                    <a href="">
-                        <li><img id="dynamicIcon5" src="/pictures/정비예약.png" alt=""><span>정비예약</span></li>
+                        <li><img id="dynamicIcon5" src="../pictures/정비예약.png" alt=""><span>정비예약</span></li>
                     </a>
                 </ul>
 
@@ -203,7 +203,7 @@
 
             <div class="bodyTitle1">
                 <h1>전기차</h1>
-                <h3>지구 환경을 품은 현대자동차의 미래형 모빌리티를 경험해보세요.</h3>
+                <h3>지구 환경을 품은 이젠자동차의 미래형 모빌리티를 경험해보세요.</h3>
             </div>
 
 
@@ -266,10 +266,14 @@
                 </div>
                 <div class="adList">
                     <ul id="adSlider">
+
                         <li id="adSlider1">
                             <span id="adtext1">자세히 보기</span>
-                            <div id="adbgc1"></div>
-                            <img src="/pictures/이벤트1.png" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-ev-all-day-driving-experience-2023-allday-dx.html"
+                                target="_blank">
+                                <div id="adbgc1"></div>
+                            </a>
+                            <img src="../pictures/이벤트1.png" alt="">
                             <div>
                                 <h1>전기차 All day Driving eXperience</h1>
                                 <h3>드라이빙라운지에서 전기차를 충분히 경험해보세요! <br>
@@ -277,10 +281,14 @@
                                 </h3>
                             </div>
                         </li>
+
                         <li id="adSlider2">
                             <span id="adtext2">자세히 보기</span>
-                            <div id="adbgc2"></div>
-                            <img src="/pictures/이벤트2.jpg" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-driving-drawing-create-your-casper.html"
+                                target="_blank">
+                                <div id="adbgc2"></div>
+                            </a>
+                            <img src="../pictures/이벤트2.jpg" alt="">
                             <div>
                                 <h1>캐스퍼 그리기 대회 시즌2</h1>
                                 <h3>Create your CASPER, 이벤트 참여하고 캐스퍼 받아가세요! <br>
@@ -289,8 +297,11 @@
                         </li>
                         <li id="adSlider3">
                             <span id="adtext3">자세히 보기</span>
-                            <div id="adbgc3"></div>
-                            <img src="/pictures/이벤트3.jpg" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-launching-the-all-new-santa-fe-bluelink-steraming-service.html"
+                                target="_blank">
+                                <div id="adbgc3"></div>
+                            </a>
+                            <img src="../pictures/이벤트3.jpg" alt="">
                             <div>
                                 <h1>디 올 뉴 싼타페 블루링크 스트리밍 서비스 런칭 기념</h1>
                                 <h3>새롭게 태어난 싼타페와 함께 블루링크 스트리밍 서비스를 만나보세요! <br>
@@ -299,8 +310,11 @@
                         </li>
                         <li id="adSlider4">
                             <span id="adtext4">자세히 보기</span>
-                            <div id="adbgc4"></div>
-                            <img src="/pictures/이벤트4.png" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-hyundaishop-launching-h-licensed-accessories.html"
+                                target="_blank">
+                                <div id="adbgc4"></div>
+                            </a>
+                            <img src="../pictures/이벤트4.png" alt="">
                             <div>
                                 <h1>H Licensed Accessories 런칭 기념!</h1>
                                 <h3>응원 댓글 달고 스탠바이미 Go 받자! <br>
@@ -310,8 +324,11 @@
                         </li>
                         <li id="adSlider5">
                             <span id="adtext5">자세히 보기</span>
-                            <div id="adbgc5"></div>
-                            <img src="/pictures/이벤트5.jpg" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-hmc-avante-kona-august-special-buying-program.html"
+                                target="_blank">
+                                <div id="adbgc5"></div>
+                            </a>
+                            <img src="../pictures/이벤트5.jpg" alt="">
                             <div>
                                 <h1>아반떼, 코나 8월 특별 금융 프로그램</h1>
                                 <h3>지금이 딱! 무이자로 아반떼, 코나 살 기회 <br>
@@ -321,8 +338,11 @@
                         </li>
                         <li id="adSlider6">
                             <span id="adtext6">자세히 보기</span>
-                            <div id="adbgc6"></div>
-                            <img src="/pictures/이벤트6.jpg" alt="">
+                            <a href="https://www.hyundai.com/kr/ko/event/event-hc-purchase-benefits-202308.html"
+                                target="_blank">
+                                <div id="adbgc6"></div>
+                            </a>
+                            <img src="../pictures/이벤트6.jpg" alt="">
                             <div>
                                 <h1>8월 신차 구매 혜택</h1>
                                 <h3>Hyundai Mobility카드만의 구매 프로그램 <br>
@@ -359,7 +379,7 @@
 
 
             <div>
-                <img id="footerLogo" src="/pictures/footer_logo.png" alt="">
+                <img id="footerLogo" src="../pictures/footer_logo.png" width="90" height="100" alt="">
             </div>
 
             <div class="footerMenu1">
@@ -391,13 +411,13 @@
 
             <div class="footerMenu2">
                 <ul class="footerList5">
-                    <li><img src="/pictures/로고1.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고2.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고3.png" alt="" width="13" height="20"></li>
-                    <li><img src="/pictures/로고4.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고5.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고6.png" alt="" width="20"></li>
-                    <li><img src="/pictures/로고7.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고1.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고2.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고3.png" alt="" width="13" height="20"></li>
+                    <li><img src="../pictures/로고4.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고5.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고6.png" alt="" width="20"></li>
+                    <li><img src="../pictures/로고7.png" alt="" width="20"></li>
                 </ul>
             </div>
 
@@ -406,28 +426,28 @@
 
         <div class="footerContainer2">
             <ul class="footerList6">
-                <li><img src="/pictures/로고8.png" alt=""><span>웹 접근성 품질인증</span></li>
-                <li><img src="/pictures/로고9.png" alt=""><span>
+                <li><img src="../pictures/로고8.png" alt=""><span>웹 접근성 품질인증</span></li>
+                <li><img src="../pictures/로고9.png" alt=""><span>
                         우수디자인 지식경제부선정
                     </span> </li>
-                <li><img src="/pictures/로고10.png" alt=""><span>
+                <li><img src="../pictures/로고10.png" alt=""><span>
                         가족친화 우수기관
                     </span></li>
-                <li><img src="/pictures/로고11.png" alt=""><span>
+                <li><img src="../pictures/로고11.png" alt=""><span>
                         2022년 한국서비스품질지수 (KS- <br>
                         SQI) 자동차 A/S 부문 8년 연속 1위
                     </span></li>
-                <li><img src="/pictures/로고12.png" alt=""><span>
+                <li><img src="../pictures/로고12.png" alt=""><span>
                         2022년 한국품질만족지수 (KS- <br>
                         QEI) 조사 12개 부문 1위
                     </span></li>
-                <li><img src="/pictures/로고13.png" alt=""><span>
+                <li><img src="../pictures/로고13.png" alt=""><span>
                         2023년 국가고객만족도(NCSI) <br>
                         조사 대상 전 부문 1위 수상 (준중형, <br>
                         중형, 준대형, 대형, 컴팩트RV, <br>
                         대형RV, 전기차)
                     </span></li>
-                <li><img src="/pictures/로고14.png" alt=""><span>
+                <li><img src="../pictures/로고14.png" alt=""><span>
                         KMAC 선정<br>
                         2022년 한국산업의 고객만족도<br>
                         일반승용차 부문 29년 연속<br>
