프론트엔드 검수 이후 완성본

--- a/globalEventPage/globalEvent.html
+++ b/globalEventPage/globalEvent.html
@@ -21,11 +21,21 @@
           height="25"></a>
 
       <ul class="boxContainer">
-        <li>모델</li>
-        <li>이벤트</li>
-        <li>서비스/멤버십</li>
-        <li>디지털/고객지원</li>
-        <li>브랜드</li>
+        <a href="../NEW_project/myCar.html">
+          <li>모델</li>
+        </a>
+        <a href="">
+          <li>이벤트</li>
+        </a>
+        <a href="">
+          <li>서비스/멤버십</li>
+        </a>
+        <a href="../loginPage/230822_customperfect.html">
+          <li>디지털/고객지원</li>
+        </a>
+        <a href="">
+          <li>브랜드</li>
+        </a>
         <li><img src="../pictures/현대샵.png" alt=""></li>
       </ul>
 
