--- a/loginPage/230823_join_perfect.html
+++ b/loginPage/230823_join_perfect.html
@@ -438,12 +438,12 @@
         <div id="dot2">ㆍ</div>
         <div id="dottext">비밀번호</div>
         <br>
-        <input class="input1_1" placeholder=" 비밀번호 입력">
+        <input type="password" class="input1_1" placeholder=" 비밀번호 입력">
         <br>
         <!-- <div id="dot3">ㆍ</div> -->
         <!-- <div id="dottext">비밀번호 확인</div>  -->
         <!-- <br> -->
-        <input id="rePwd" class="input2" placeholder=" 비밀번호 재입력">
+        <input type="password" id="rePwd" class="input2" placeholder=" 비밀번호 재입력">
         <br>
         <div id="divPw">
             <div id="imgdiv2">i</div>
